--- a/rails-dev/Dockerfile
+++ b/rails-dev/Dockerfile
@@ -3,8 +3,11 @@ MAINTAINER Daniel D <djx339@gmail.com>
 
 # Install deps
 RUN apt-get update && apt-get install -y \
+        build-essential \
+        cmake \
         vim \
         openssh-server \
+        python-dev \
         supervisor \
     --no-install-recommends && rm -rf /var/lib/apt/lists/*
 
@@ -16,6 +19,9 @@ RUN mkdir /var/run/sshd \
 # Setup supervisord
 RUN mkdir -p /var/log/supervisor
 COPY supervisord.conf /etc/supervisor/conf.d/supervisord.conf
+
+# Setup dev env
+RUN git clone https://github.com/djx339/dotfiles.git ~/dotfiles
 
 EXPOSE 22 3000
 
