Update rails dev Dockerfile

--- a/rails-dev/Dockerfile
+++ b/rails-dev/Dockerfile
@@ -2,8 +2,9 @@ FROM ubuntu:14.04
 MAINTAINER Daniel D <djx339@gmail.com>
 
 RUN apt-get update && apt-get install -y --no-install-recommends \
-    	ca-certificates \
+        ca-certificates \
         curl \
+        cmake \
         wget \
         bzr \
         git \
@@ -70,17 +71,17 @@ RUN apt-get update && apt-get install -y --no-install-recommends \
     && rm -rf /var/lib/apt/lists/* \
     && mkdir -p /usr/src/ruby \
     && curl -fSL -o ruby.tar.gz "http://cache.ruby-lang.org/pub/ruby/$RUBY_MAJOR/ruby-$RUBY_VERSION.tar.gz" \
-	&& echo "$RUBY_DOWNLOAD_SHA256 *ruby.tar.gz" | sha256sum -c - \
-	&& tar -xzf ruby.tar.gz -C /usr/src/ruby --strip-components=1 \
-	&& rm ruby.tar.gz \
-	&& cd /usr/src/ruby \
-	&& autoconf \
-	&& ./configure --disable-install-doc \
-	&& make -j"$(nproc)" \
-	&& make install \
-	&& apt-get purge -y --auto-remove bison libgdbm-dev ruby \
-	&& gem update --system $RUBYGEMS_VERSION \
-	&& rm -r /usr/src/ruby
+    && echo "$RUBY_DOWNLOAD_SHA256 *ruby.tar.gz" | sha256sum -c - \
+    && tar -xzf ruby.tar.gz -C /usr/src/ruby --strip-components=1 \
+    && rm ruby.tar.gz \
+    && cd /usr/src/ruby \
+    && autoconf \
+    && ./configure --disable-install-doc \
+    && make -j"$(nproc)" \
+    && make install \
+    && apt-get purge -y --auto-remove bison libgdbm-dev ruby \
+    && gem update --system $RUBYGEMS_VERSION \
+    && rm -r /usr/src/ruby
 
 ENV GEM_HOME /usr/local/bundle
 ENV PATH $GEM_HOME/bin:$PATH
@@ -88,8 +89,8 @@ ENV PATH $GEM_HOME/bin:$PATH
 ENV BUNDLER_VERSION 1.10.6
 
 RUN gem install bundler --version "$BUNDLER_VERSION" \
-	&& bundle config --global path "$GEM_HOME" \
-	&& bundle config --global bin "$GEM_HOME/bin"
+    && bundle config --global path "$GEM_HOME" \
+    && bundle config --global bin "$GEM_HOME/bin"
 
 # don't create ".bundle" in all our apps
 ENV BUNDLE_APP_CONFIG $GEM_HOME
