--- a/buildpack-deps/ubuntu/ssh/Dockerfile
+++ b/buildpack-deps/ubuntu/ssh/Dockerfile
@@ -9,6 +9,9 @@ RUN apt-get update && apt-get install -y --no-install-recommends \
 RUN mkdir -p /var/run/sshd /var/log/supervisor \
     && sed -i 's/^#PasswordAuthentication yes/PasswordAuthentication no/' /etc/ssh/sshd_config
 
+# SSH login fix. Otherwise user is kicked off after login
+RUN sed 's@session\s*required\s*pam_loginuid.so@session optional pam_loginuid.so@g' -i /etc/pam.d/sshd
+
 # supervisor configuration
 COPY supervisord.conf /etc/supervisor/conf.d/supervisord.conf
 
