--- a/.travis.yml
+++ b/.travis.yml
@@ -3,5 +3,9 @@ sudo: required
 services:
   - docker
   
+before_install:
+  - docker login -e="$DOCKER_EMAIL" -u="$DOCKER_USERNAME" -p="$DOCKER_PASSWORD"
+  
 script:
   - docker build -t djx339/torch torch/
+  - docker push djx339/torch
