--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,6 @@ services:
 script:
   - docker info
   - docker --version
-  - docker login -u="$DOCKER_USERNAME" -p="$DOCKER_PASSWORD"
+  - docker login -e="$DOCKER_EMAIL" -u="$DOCKER_USERNAME" -p="$DOCKER_PASSWORD"
   - docker build -t djx339/torch torch/
   - docker push djx339/torch
