--- a/.travis.yml
+++ b/.travis.yml
@@ -3,9 +3,12 @@ sudo: required
 services:
   - docker
   
-script:
+before_install:
   - docker info
   - docker --version
   - docker login -e="$DOCKER_EMAIL" -u="$DOCKER_USERNAME" -p="$DOCKER_PASSWORD"
   - docker build -t djx339/torch torch/
   - docker push djx339/torch
+
+script:
+  - echo "hello world"
