--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ before_install:
   - docker info
   - docker --version
   - docker login -e="$DOCKER_EMAIL" -u="$DOCKER_USERNAME" -p="$DOCKER_PASSWORD"
-  - travis_wait 240 docker build -t djx339/torch torch/
+  - docker build -t djx339/torch torch/
   - docker push djx339/torch
 
 script:
